--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ div,
 ul,
 li,
 p,
-h1,
 h2,
 h3,
 h4,
@@ -44,9 +43,10 @@ h6 {
 
 h1 {
   font-size: 50px;
-  color: #00cc98;
   line-height: 48px;
   display: inline;
+  font-family: 'Kavoon', cursive;
+	color: #044d9b;
 }
 
 h2 {
