--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,9 @@ h5 {
 
 }
 
+#headerBox {
+	justify-content: space-between;
+}
 
 .date-text {
   font-style: italic;
@@ -134,7 +137,7 @@ a {
 }
 
 .white-text {
-	color: white;
+	color: blue;
   font-weight: bold;
 }
 
@@ -172,6 +175,7 @@ ul {
   float: left;
   padding: 10px;
   width: 200px;
+  height: 200px;
   display: none;
 	border-radius: 200px;
 }
@@ -188,11 +192,16 @@ span {
   text-align: center;
 }
 
+.logo-sprite {
+	height:35px;
+}
+
 /* Media queries to handle various device widths */
 
 @media only screen and (max-width:900px) {
   .biopic {
     width: 175px;
+	height: 175px;
   }
 }
 
