--- a/css/style.css
+++ b/css/style.css
@@ -80,9 +80,12 @@ h5 {
 }
 
 #headerBox {
-	justify-content: space-between;
+	justify-content: flex-start;
 }
 
+#mobile-num, #email-addr {
+	display: none;
+}
 .date-text {
   font-style: italic;
   font-size: 14px;
@@ -136,13 +139,19 @@ a {
 	color: #5a5490;
 }
 
-.white-text {
+.small-text {
 	color: #5484b7;
-  font-weight: bold;
+	font-weight: bold;
+	padding: 8px;
 }
 
 .dark-gray {
   background-color: #4a4a4a;
+}
+
+.flex-item {
+  display: flex;
+  flex-direction: row;
 }
 
 .flex-box {
