--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ h2 {
 	margin-bottom:20px;
 }
 
+.col-sm-5 {
+	text-align: center;
+	text-align: -webkit-center;
+}
+
 #bg {
 	z-index: -1;
 	position: fixed; 
