added coming soon, adjusted css

--- a/style.css
+++ b/style.css
@@ -16,9 +16,16 @@ h2 {
 	opacity: .8;
 }
 
-.col-sm-4 h4 {
+.col-sm-4 h3, .col-sm-4 h4, .col-sm-4 p {
+	margin-top: 0;
 	text-align: left;
-	padding: 10px 0;
+}
+
+#comingsoon {
+	text-align: center;
+	vertical-align: middle;
+	line-height: 90px;
+	border-style: dashed;
 }
 
 #bg {
