--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ h2 {
 	opacity: .8;
 }
 
+.col-sm-4, h3 {
+	padding-bottom: 10px;
+}
 .col-sm-4 h3, .col-sm-4 h4, .col-sm-4 p {
 	margin-top: 0;
 	text-align: left;
