--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	padding-top: 50px;
+}
+
 h1, h2, h3, h4 , h5, p, .nav,.navbar {
 	font-family: 'Titillium Web', sans-serif;
 }
@@ -22,6 +26,7 @@ h2 {
 .col-sm-4 h3, .col-sm-4 h4, .col-sm-4 p {
 	margin-top: 0;
 	text-align: left;
+	color: black;
 }
 
 #comingsoon {
