--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,11 @@ h2 {
 	margin:10px;
 }
 
+.webtech-img {
+	margin:10px;
+	padding:5px;
+}
+
 .jumbotron {
 	background-color: #1d1d1d;
 	opacity: .8;
