--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,7 @@ h2 {
 .col-sm-4, h3 {
 	padding-bottom: 10px;
 }
-.col-sm-4 h3, .col-sm-4 h4, .col-sm-4 p {
+.col-sm-4 h3, .col-sm-4 h4, .col-sm-4 p, .col-sm-6 h3, .col-sm-6 h4, .col-sm-6 p {
 	margin-top: 0;
 	text-align: left;
 	color: black;
