cleaned up about page, added udacity and binghamton

--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,10 @@ h2 {
 	opacity: .8;
 }
 
+.col-sm-8 {
+	padding-right: 30px;
+    padding-left: 25px;
+}
 .col-sm-4, h3 {
 	padding-bottom: 10px;
 }
